Adopting TFS commits from 75b42ff6d8 to 2661361 (gpt-5.6-sol ultra)