@@ -1,8 +1,8 @@
 package ai.greycos.solver.core.impl.heuristic.selector.move.generic;
 
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Objects;
+import java.util.SequencedCollection;
 
 import ai.greycos.solver.core.config.heuristic.selector.common.SelectionCacheType;
 import ai.greycos.solver.core.config.heuristic.selector.common.SelectionOrder;
@@ -21,13 +21,8 @@ import ai.greycos.solver.core.impl.heuristic.selector.entity.EntitySelectorFacto
 import ai.greycos.solver.core.impl.heuristic.selector.move.AbstractMoveSelectorFactory;
 import ai.greycos.solver.core.impl.heuristic.selector.move.MoveSelector;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 public class SwapMoveSelectorFactory<Solution_>
     extends AbstractMoveSelectorFactory<Solution_, SwapMoveSelectorConfig> {
-
-  private static final Logger LOGGER = LoggerFactory.getLogger(SwapMoveSelectorFactory.class);
 
   public SwapMoveSelectorFactory(SwapMoveSelectorConfig moveSelectorConfig) {
     // We copy the configuration,
@@ -61,7 +56,8 @@ public class SwapMoveSelectorFactory<Solution_>
           && entitySelectorConfig.getMimicSelectorRef() == null) {
         var entityName = Objects.requireNonNull(entityDescriptor.getEntityClass().getSimpleName());
         // We set the id to make sure the value selector will use the mimic recorder
-        entityRecorderId = ConfigUtils.addRandomSuffix(entityName, configPolicy.getRandom());
+        entityRecorderId =
+            ConfigUtils.addRandomSuffix(entityName, configPolicy.getRandom().factoryUsage());
         entitySelectorConfig.setId(entityRecorderId);
       } else {
         entityRecorderId =
@@ -115,20 +111,20 @@ public class SwapMoveSelectorFactory<Solution_>
     if (onlyEntityDescriptor != null) {
       var variableDescriptorList = onlyEntityDescriptor.getGenuineVariableDescriptorList();
       // If there is a single list variable, unfold to list swap move selector config.
-      if (variableDescriptorList.size() == 1 && variableDescriptorList.get(0).isListVariable()) {
-        return buildListSwapMoveSelectorConfig(variableDescriptorList.get(0), true);
+      if (variableDescriptorList.size() == 1
+          && variableDescriptorList.getFirst().isListVariable()) {
+        return buildListSwapMoveSelectorConfig(variableDescriptorList.getFirst(), true);
       }
       // No need for unfolding or deducing
       return null;
     }
-    Collection<EntityDescriptor<Solution_>> entityDescriptors =
-        configPolicy.getSolutionDescriptor().getGenuineEntityDescriptors();
+    var entityDescriptors = configPolicy.getSolutionDescriptor().getGenuineEntityDescriptors();
     return buildUnfoldedMoveSelectorConfig(configPolicy, entityDescriptors);
   }
 
   protected MoveSelectorConfig<?> buildUnfoldedMoveSelectorConfig(
       HeuristicConfigPolicy<Solution_> configPolicy,
-      Collection<EntityDescriptor<Solution_>> entityDescriptors) {
+      SequencedCollection<EntityDescriptor<Solution_>> entityDescriptors) {
     var moveSelectorConfigList = new ArrayList<MoveSelectorConfig>(entityDescriptors.size());
 
     // When using a mixed model,
@@ -137,23 +133,23 @@ public class SwapMoveSelectorFactory<Solution_>
     // The strategy aims to provide a more normalized move selector collection for mixed models.
     var variableDescriptorList =
         configPolicy.getSolutionDescriptor().hasBothBasicAndListVariables()
-            ? entityDescriptors.iterator().next().getGenuineBasicVariableDescriptorList()
-            : entityDescriptors.iterator().next().getGenuineVariableDescriptorList();
+            ? entityDescriptors.getFirst().getBasicVariableDescriptorList()
+            : entityDescriptors.getFirst().getGenuineVariableDescriptorList();
 
     // Only unfold into list swap move selector for the basic scenario with 1 entity and 1 list
     // variable.
     if (entityDescriptors.size() == 1
         && variableDescriptorList.size() == 1
-        && variableDescriptorList.get(0).isListVariable()) {
+        && variableDescriptorList.getFirst().isListVariable()) {
       // No childMoveSelectorConfig.inherit() because of unfoldedMoveSelectorConfig.inheritFolded()
       var childMoveSelectorConfig =
-          buildListSwapMoveSelectorConfig(variableDescriptorList.get(0), false);
+          buildListSwapMoveSelectorConfig(variableDescriptorList.getFirst(), false);
       moveSelectorConfigList.add(childMoveSelectorConfig);
     } else {
       // More complex scenarios do not support unfolding into list swap => fail fast if there is any
       // list variable.
       for (var entityDescriptor : entityDescriptors) {
-        if (!entityDescriptor.hasAnyGenuineBasicVariables()) {
+        if (!entityDescriptor.hasAnyBasicVariables()) {
           // We filter out entities that do not have basic variables (e.g., mixed models)
           continue;
         }
@@ -166,7 +162,7 @@ public class SwapMoveSelectorFactory<Solution_>
         }
         childMoveSelectorConfig.setEntitySelectorConfig(childEntitySelectorConfig);
         if (config.getSecondaryEntitySelectorConfig() != null) {
-          EntitySelectorConfig childSecondaryEntitySelectorConfig =
+          var childSecondaryEntitySelectorConfig =
               new EntitySelectorConfig(config.getSecondaryEntitySelectorConfig());
           if (childSecondaryEntitySelectorConfig.getMimicSelectorRef() == null) {
             childSecondaryEntitySelectorConfig.setEntityClass(entityDescriptor.getEntityClass());
@@ -180,12 +176,12 @@ public class SwapMoveSelectorFactory<Solution_>
     }
     if (moveSelectorConfigList.isEmpty()) {
       throw new IllegalStateException(
-          "The swap move selector cannot be created when there is no basic variables.");
+          "The swap move selector cannot be created when there are no basic variables.");
     }
 
     MoveSelectorConfig<?> unfoldedMoveSelectorConfig;
     if (moveSelectorConfigList.size() == 1) {
-      unfoldedMoveSelectorConfig = moveSelectorConfigList.get(0);
+      unfoldedMoveSelectorConfig = moveSelectorConfigList.getFirst();
     } else {
       unfoldedMoveSelectorConfig = new UnionMoveSelectorConfig(moveSelectorConfigList);
     }
@@ -195,13 +191,6 @@ public class SwapMoveSelectorFactory<Solution_>
 
   private ListSwapMoveSelectorConfig buildListSwapMoveSelectorConfig(
       VariableDescriptor<?> variableDescriptor, boolean inheritFoldedConfig) {
-    LOGGER.warn(
-        """
-                        The swapMoveSelectorConfig ({}) is being used for a list variable.
-                        We are keeping this option through the 1.x release stream for backward compatibility reasons.
-                        Please update your solver config to use {} now.""",
-        config,
-        ListSwapMoveSelectorConfig.class.getSimpleName());
     var listSwapMoveSelectorConfig = new ListSwapMoveSelectorConfig();
     var childValueSelectorConfig =
         new ValueSelectorConfig(new ValueSelectorConfig(variableDescriptor.getVariableName()));
